deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server1-deployment
  labels:
    app: server1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server1
  template:
    metadata:
      labels:
        app: server1
    spec:
      containers:
      - name: express-server-1
        image: konami98/server:v1
        ports:
        - containerPort: 8001
