deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server2-deployment
  labels:
    app: server2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server2
  template:
    metadata:
      labels:
        app: server2
    spec:
      containers:
      - name: express-server-2
        image: konami98/server:v2
        ports:
        - containerPort: 8002
