deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server1-deployment
  labels:
    app: server1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server1
  template:
    metadata:
      labels:
        app: server1
    spec:
      containers:
      - name: express-server-1
        image: minhaz71/express-server-1:latest
        ports:
        - containerPort: 3001
