svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: server1-service
spec:
  selector:
    app: server1
  ports:
    - port: 3001
      targetPort: 3001
